--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     id "com.android.application"
+    // START: FlutterFire Configuration
+    id 'com.google.gms.google-services'
+    // END: FlutterFire Configuration
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
 }
@@ -24,10 +27,12 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.renters"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
-    compileOptions {
+    compileOptions 
+    {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -41,6 +46,7 @@ android {
     }
 
     defaultConfig {
+
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.renters"
         // You can update the following values to match your application needs.
@@ -66,5 +72,7 @@ flutter {
 }
 
 dependencies {
+      coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+
       implementation 'com.android.support:multidex:1.0.3'
 }
