--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,8 +5,12 @@ buildscript {
         mavenCentral()
     }
 
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    dependencies 
+    {
+
+    classpath 'com.android.tools.build:gradle:7.3.1'
+
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
