--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   firebase_storage: ^11.6.0
   auto_animated: ^3.2.0
   animate_do: ^3.3.4
+  firebase_messaging: ^14.9.2
+  flutter_local_notifications: ^17.1.2
 
 dev_dependencies:
   flutter_test:
