--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   animate_do: ^3.3.4
   firebase_messaging: ^14.9.2
   flutter_local_notifications: ^17.1.2
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
