--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   firebase_messaging: ^14.9.2
   flutter_local_notifications: ^17.1.2
   flutter_svg: ^2.0.10+1
+  webview_flutter: ^4.7.0
 
 dev_dependencies:
   flutter_test:
